--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,40 @@ img {
   display: block;
   max-width: 100%;
 }
+
+/* ---------- TIMER ---------- */
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.timer {
+  display: flex;
+  margin-top: 20px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.field + .field {
+  margin-left: 20px;
+}
+
+.value {
+  font-family: 'Ubuntu Mono', monospace;
+  font-size: 35px;
+  font-weight: 400;
+  line-height: 0.9;
+}
+
+.label {
+  font-family: 'Ubuntu Mono', monospace;
+  font-size: 12px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
